@@ -1,8 +1,14 @@
 **Added**
 *Updated*
 ~~Fixed or Removed~~
+[2017041601]
+~~afreeca bug~~
+~~bilibili bug~~
+
+
 [2017041600]
 **web proxy support**
+
 **log system**
 *WebUI*
 
